# ai_deep_research

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/deep_research/: __init__.py  config.py  main.py
src/deep_research/agents/: orchestrator.py
src/deep_research/agents/prompts/: analyst.py  note_taker.py  orchestrator.py  planner.py  reviewer.py  searcher.py  writer.py
src/deep_research/agents/subagents/: analyst.py  note_taker.py  planner.py  reviewer.py  searcher.py  writer.py
src/deep_research/api/: dependencies.py  router.py  schemas.py
src/deep_research/cli/: app.py
src/deep_research/cli/commands/: config.py  export.py  list.py  resume.py  run.py  serve.py  status.py
src/deep_research/cli/ui/: progress.py  tables.py
src/deep_research/db/: engine.py  models.py  repository.py
src/deep_research/schemas/: events.py  note.py  research.py  source.py
src/deep_research/services/: cost_tracker.py  event_emitter.py  pipeline.py  research_service.py  stage_tracker.py
src/deep_research/tools/: arxiv_search.py  export_tool.py  tavily_search.py  web_scraper.py  wikipedia_search.py
